# mathematical-ecosystems

./: .gitignore  CMakeLists.txt  README.md
Conway's Game Of Life/Assets/Prefabs/: Cell.prefab
Conway's Game Of Life/Assets/Scenes/: SampleScene.unity
Conway's Game Of Life/Assets/Scripts/: CameraMovement.cs  Cell.cs  Game.cs
Conway's Game Of Life/ProjectSettings/: ProjectSettings.asset
Wolfram CA/Assets/Prefabs/: Cell.prefab
Wolfram CA/Assets/Scenes/: SampleScene.unity
Wolfram CA/Assets/Scripts/: CameraMovement.cs  Simulation.cs
Wolfram CA/ProjectSettings/: ProjectSettings.asset
include/: application.hpp  circle.hpp  conways.hpp  drawables.hpp  drawing_functions.hpp  easing.hpp  scene.hpp  stage.hpp  vectors.h
raylib-animation-engine/: CMakeLists.txt
raylib-animation-engine/include/: application.hpp  colors.hpp  conways.hpp  drawables.hpp  drawing_functions.hpp  easing.hpp  random.hpp  single_field_interpolation.hpp  stage.hpp  vectors.h
raylib-animation-engine/include/application/: application.hpp  application_with_state.hpp
raylib-animation-engine/include/conways/: conways.hpp  state.hpp
raylib-animation-engine/include/particle-life/: particle-life.hpp  simulation.hpp  state.hpp
raylib-animation-engine/include/stage/: batch_scene.hpp  debug_scene.hpp  scene.hpp  scene_batch.hpp  scene_builder.hpp  scene_composition.hpp  scene_controller.hpp  scene_with_duration.hpp  stage.hpp
raylib-animation-engine/src/: colors.cpp  drawing_fucntions.cpp  main.cpp
raylib-animation-engine/src/drawable/: arrow.cpp  circled_string.cpp  (+7 more)
src/: main.cpp
(+36 files in other folders)
